[metadata]
name = puppet-openstack_infra_spec_helper
summary = Puppet module for OpenStack Infra Openstack_spec_helper_infra
description-file =
    README.md
author = Puppet Labs and OpenStack Contributors
author-email = openstack-infra@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
